[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gno6"
version = "0.2.2"
description = "Kubernetes agent"
requires-python = ">=3.10,<3.14"
dependencies = [
    "yacana>=0.4.3",
    "questionary"
]

[project.scripts]
gno6 = "gno6.main:main"

[tool.setuptools.packages.find]
where = ["src"]
